just comment one line pseudo file

--- a/selecting/pseudoclass.html
+++ b/selecting/pseudoclass.html
@@ -31,7 +31,7 @@
     tchild.style.color = 'yellow';
     // select all without class active
     let achildexcepactive = document.querySelectorAll('li:not(.active)');
-    console.log(achildexcepactive);
+    // console.log(achildexcepactive);
   
 </script>
 </html>
