traverse and children done

--- a/traversing/parentnode.html
+++ b/traversing/parentnode.html
@@ -18,9 +18,11 @@
 </body>
     <script>
         let cnode = document.getElementsByClassName('note');
+        
        let pnode = cnode[0].parentNode;
        pnode.style.backgroundColor = "red";
-
+        let cnodeq = document.querySelector('.note');
+        let cnodeqparent = cnodeq.parentNode;
         let cnod = document.querySelector('.note');
         
         let childnode = document.getElementById("child");
